[project]
name = "ups-rma-reconciliation"
version = "2.16.0"
description = "UPS RMA tracking data reconciliation tool with GUI, Excel reporting and audit logging."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Damian Komorowski" }
]
dependencies = [
  "pandas>=2.1,<3.0",
  "openpyxl>=3.1,<4.0",
  "ttkbootstrap>=1.10,<2.0",
  "selenium>=4.15,<5.0",
  "requests>=2.31,<3.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
``